Added some more autism

--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,19 @@
 <title>{{ .Title }}</title>
 </head>
 <body>
-<div>
-  <h1>{{ .Title }}</h1>
-  <hr />
 
+<header>
+
+  <h1>{{ .Title }} <small>- <a href="https://github.com/nokonoko/Pomf/blob/db666481ad11d986f4a84334514b261336168ace/pages/check_script.swig#L2"><em>For autist neckbeards (TM)</em></a></small></h1>
+
+  <p>No JS, No CSS, No PHP, No SQL, No NoSQL, No *insert bad thing here*!</p>
+
+</header>
+  
+<hr />
+
+<main>
+  
   {{ if .Data }}
   <ul>
     {{ range $key, $value := .Data }}
@@ -25,8 +34,24 @@
   </form> 
 
   <h3>cURL</h3>
-  <pre>curl -F "file=@yourFileHere.ext" {{ .PageURI }}</pre>
+  <p>
+    <code>curl -F "file=@yourFileHere.ext" {{ .PageURI }}</code>
+  </p>
 
-</div>
+</main>
+
+<hr />
+
+<footer>
+
+  <address>
+    <p>
+      <strong>Neckbeard Inc.</strong><br>
+      <a href="mailto:neckbeard@wiol.io">neckbeard@wiol.io</a>
+    </p>
+  </address>
+
+</footer>
+
 </body>
 </html>
