--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>{{ .Title }}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 </head>
 <body>
 
