New view for wiol.io

--- a/views/wiolio.html
+++ b/views/wiolio.html
@@ -41,5 +41,18 @@
 
 </main>
 
+<hr />
+
+<footer>
+
+  <address>
+    <p>
+      <strong>Contact</strong><br />
+      E-mail: <a href="mailto:neckbeard@wiol.io">neckbeard@wiol.io</a>
+    </p>
+  </address>
+
+</footer>
+
 </body>
 </html>
