Moved to new domain, and therefore new view

--- a/views/nuppw.html
+++ b/views/nuppw.html
@@ -48,7 +48,7 @@
   <address>
     <p>
       <strong>Contact</strong><br />
-      E-mail: <a href="mailto:neckbeard@wiol.io">neckbeard@wiol.io</a>
+      E-mail: <a href="mailto:neckbeard@nup.pw">neckbeard@nup.pw</a>
     </p>
   </address>
 
