--- a/views/nuppw.html
+++ b/views/nuppw.html
@@ -8,9 +8,9 @@
 
 <header>
 
-  <h1>{{ .Title }}<small> - <a href="https://github.com/nokonoko/Pomf/blob/db666481ad11d986f4a84334514b261336168ace/pages/check_script.swig#L2"><em>For autist neckbeards (TM)</em></a></small></h1>
+  <h1>{{ .Title }}</h1>
 
-  <p>No JS, No CSS, No PHP, No SQL, No NoSQL, No CDN, No *insert bad thing here*!</p>
+  <p><small><a href="https://github.com/nokonoko/Pomf/blob/db666481ad11d986f4a84334514b261336168ace/pages/check_script.swig#L2"><em>For autist neckbeards (TM)</em></a></small></p>
 
 </header>
   
