--- a/views/nuppw.html
+++ b/views/nuppw.html
@@ -11,7 +11,7 @@
   <h1>{{ .Title }}</h1>
   <small><a href="https://github.com/nokonoko/Pomf/blob/db666481ad11d986f4a84334514b261336168ace/pages/check_script.swig#L2"><em>For autist neckbeards (TM)</em></a></small>
 
-  <p><a href="/tools">Tools</a></p>
+  <p><a href="/tools">Tools</a> | <a href="http://status.nup.pw/">Status</a></p>
 
 </header>
   
