Terms of service and max file size

--- a/views/nuppw.html
+++ b/views/nuppw.html
@@ -11,10 +11,12 @@
   <h1>{{ .Title }}</h1>
   <small><a href="https://github.com/nokonoko/Pomf/blob/db666481ad11d986f4a84334514b261336168ace/pages/check_script.swig#L2"><em>For autist neckbeards (TM)</em></a></small>
 
-  <p>Home | <a href="/tools/">Tools</a> | <a href="/status/">Status</a> | <a href="/contact/">Contact</a></p>
+  <p>Home | <a href="/tools/">Tools</a> | <a href="/status/">Status</a> | <a href="/contact/">Contact</a> | <a href="/terms/">Terms</a></p>
+
+  <p>Max file size is 50 MB, also read our <a href="/terms/">ToS</a></p>
 
 </header>
-  
+ 
 <hr />
 
 <main>
