--- a/views/nuppw.html
+++ b/views/nuppw.html
@@ -13,7 +13,7 @@
 
   <p>Home | <a href="/tools/">Tools</a> | <a href="/status/">Status</a> | <a href="/contact/">Contact</a> | <a href="/terms/">Terms</a></p>
 
-  <p>Max file size is 50 MB, also read our <a href="/terms/">ToS</a></p>
+  <p>Max file size is 50 MB, also read our <a href="/terms/">ToS</a>.</p>
 
 </header>
  
